# iblipper-agent

./: LICENSE  README.md  SKILL.md  index.html  package-lock.json  package.json  pyproject.toml  tailwind.config.js
src/: App.svelte  app.css
src/components/: PresentationMode.svelte  Typography.svelte  TypographyPlayground.svelte
src/iblipper/: __init__.py  logic.py  renderer.py  server.py
src/iblipper/scripts/: iblipper.sh
